--- a/blog/src/index.css
+++ b/blog/src/index.css
@@ -5,7 +5,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: black;
   text-decoration: none;
 }
 
@@ -26,7 +26,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
